--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,11 +11,13 @@
   "current": {
     "logo": "shopify://shop_images/MVP_Official_Logo_Customs_Added_PNG.png",
     "logo_width": 300,
+    "logo_width_mobile": 200,
     "favicon": "shopify://shop_images/mvp_official_White_Stroke_8ff0261c-770e-456d-8dc5-280c43a7b875.png",
     "type_header_font": "assistant_n4",
     "type_body_font": "assistant_n4",
     "page_width": 1200,
     "spacing_grid_vertical": 8,
+    "inputs_shadow_vertical_offset": 0,
     "sold_out_badge_color_scheme": "background-1",
     "social_instagram_link": "http://instagram.com/mvpcustoms",
     "social_twitter_link": "",
